# sem3lab3_Liza

./: .gitignore  CMakeLists.txt  LogicGate.cpp  LogicGate.hpp  LogicGateDynamic.hpp  LogicGateOperators.cpp  LogicGateOperators.hpp  main1.cpp  test.cpp
